STYLE SHEET UPDATE

--- a/css/style.css
+++ b/css/style.css
@@ -1275,8 +1275,8 @@ About-section
 }
 
 .single-description img{
-    height:450px !important;
-    width:auto !important;
+    height:350px !important;
+    width:100% !important;
 
 }
 /*-------------------------------------------------
